<?xml version="1.0"?>
<package format="2">
  <name>sonar_camera_reconstruction_pkg</name>
  <version>0.0.0</version>
  <description>The sonar_camera_reconstruction_pkg package</description>

  <maintainer email="icollado@stevens.edu">Ivana Collado</maintainer>

  <license>MIT</license>

  <build_depend>bruce_slam</build_depend>
  <exec_depend>bruce_slam</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export>

  </export>
</package>
